# Fillit

./: Makefile  a.out  file.txt  fillit.h  fillitAnn.c  h.c  structuresAnn.c  test.c  tetrim.c
111/: create_col.c  create_row.c  dance.c  fillit.h  main.c
Fillit2/: CMakeLists.txt  check_termino.c  create_term.c  fillit.h  main.c  read_term.c
Get_next_line/: get_next_line.c
Get_next_line/libft/: Makefile  ft_isdigit.c  ft_iswspace.c  ft_lstadd.c  ft_lstmap.c  ft_memccpy.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strlen.c  ft_toupper.c  libft.h
bc/: fillit.h  map_create.c  map_destroy.c  map_read.c
bc/libft/: Makefile  ft_bzero.c  ft_memalloc.c  ft_memdel.c  ft_memset.c
bc/libft/includes/: libft.h
includes/: fillit.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_lstnew.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putstr_fd.c  ft_strcat.c  ft_strmap.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strsub.c  ft_tolower.c
libft/includes/: libft.h
libft/src/: ft_isprint.c  ft_itoa.c  ft_lstdel.c  ft_memalloc.c  ft_strcmp.c  ft_strdel.c
my_proj/: Makefile  check_buff.c  check_paint_map.c  check_struct.c  count_term.c  create_map.c  delete_struct.c  destroy_map.c  fill_coordinates.c  fillit  fillit.h  ft_memalloc.c  get_struct.c  main.c  print_map.c  read_file.c  solve_map.c
my_proj/libft/: Makefile
my_proj/libft/src/: ft_isalpha.c  ft_isdigit.c  ft_memcmp.c  ft_memmove.c  ft_putendl_fd.c  ft_putnbr.c  ft_strclr.c  ft_strjoin.c  ft_strsplit.c  ft_strtrim.c
newFILLIT/: CMakeLists.txt  library.c  library.h
newproject111/: CMakeLists.txt  Makefile  check_buff.c  check_paint_map.c  check_struct.c  count_term.c  create_map.c  fill_coordinates.c  fillit.h  get_struct.c  library.h  main.c  print_map.c  read_file.c  solve_map.c
projectCL/: CMakeLists.txt  check_form.c  check_termino.c  detect_error.c  detect_termino.c  get_struct.c  header.h  king_size_func_fuck.c  main.c  recursive_size.c
projectCL/Get_next_line/libft/: Makefile  author  ft_itoa.c  ft_memdel.c  ft_putnbr_fd.c  ft_strcmp.c  ft_strnew.c  ft_strrchr.c
projectCLDAY2/: a.out  check_form.c  check_termino.c  detect_termino.c  get_struct.c  header.h  main.c  recursive_size.c
projectCLDAY2/Get_next_line/: get_next_line.h
src/: board_check.c  board_create.c  board_destroy.c  board_paint.c  board_print.c  board_remove.c  board_solve.c  main.c  tetrim_area.c  tetrim_count.c  tetrim_create.c  tetrim_destroy.c  tetrim_readfile.c  tetrim_text.c  tetrim_valid.c
tests/: file copy.txt  file.txt
(+19 files in other folders)
